tests/invalid/test_053.wyal
assert:
  forall(int[] ys, int[] xs):
    if:
        forall(int i):
            if:
                (i < |xs|) && (i < |ys|)
            then:
                xs[i] == ys[i]
    then:
        |xs| < |ys|